--- a/_posts/2023-09-21-github-블로그-만들기-1.md
+++ b/_posts/2023-09-21-github-블로그-만들기-1.md
@@ -11,7 +11,7 @@ banner:
   height: "100vh"
   min_height: "38vh"
   heading_style: "font-size: 4.25em; font-weight: bold; text-shadow: 5px 6px 5px black;"
-  subheading_style: "color: gold; font-size: 2.0em"
+  subheading_style: "color: gold"
 tags: [github, github_블로그]
 top: 1
 sidebar: []
