Add font size and line height options in _layout.scss post content section

--- a/_posts/2023-09-21-github-블로그-만들기-1.md
+++ b/_posts/2023-09-21-github-블로그-만들기-1.md
@@ -144,10 +144,9 @@ $ gem install jekyll bundler
 ```
 <br/>
 
-> [❓] **What is 'gem'?**
-> 
+> **_NOTE:_ What is 'gem'?**
+>
 > - 'gem'은 분산 패키지 시스템으로 라이브러리의 작성이나 공개, 설치를 도와주는 시스템.
-> 
 > - Linux에서의 apt 시스템과 유사하다. Ruby는 gem을 사용하여 라이브러리 설치를 진행한다는 것을 알아두자!
 
 <br/>
