--- a/_posts/2023-09-21-github-블로그-만들기-1.md
+++ b/_posts/2023-09-21-github-블로그-만들기-1.md
@@ -17,13 +17,13 @@ top: 1
 sidebar: []
 ---
 
-Apple의 **M1 Silicon Mac 환경**에서 github.io 블로그를 만들어보고자 한다.
+<span style="color:orangered"> Apple의 **M1 Silicon Mac 환경**</span>에서 github.io 블로그를 만들어보고자 한다.
 
 현재의 나와 같을 미래의 초보 개발자들을 위해 필자가 겪었던 오류 뿐만 아니라, 과정을 자세히(친절히) 풀어 써보고자 한다.
 
 ## 1-1. Ruby (rbenv 설치)
 
-Mac 유저 중 github.io 블로그를 만들기 위해 구글링을 해본 사람들은 다들 프로세스를 따라하다가 **Ruby 설치 과정에서 다음과 같은 오류**를 직면한다. (필자도 그랬음.)
+Mac 유저 중 github.io 블로그를 만들기 위해 구글링을 해본 사람들은 다들 프로세스를 따라하다가 <span style="color:orangered"> **Ruby 설치 과정에서 다음과 같은 오류**</span>를 직면한다. (필자도 그랬음.)
 
 ```sh
 $ gem install bundler
@@ -31,12 +31,14 @@ $ gem install bundler
 ERROR:  While executing gem ... (Gem::FilePermissionError)
     You don't have write permissions for the /Library/Ruby/Gems/2.3.0 directory.
 ``` 
+
 <br/>
-**Mac은 시스템에서 이미 Ruby를 사용하고 있기 때문에,** 시스템에 이미 있던 Ruby에서 `gem install bundler` 명령어를 실행하면 다음과 같이 **Permission Error**가 나는 것!
+
+<span style="color:orangered"> **Mac은 시스템에서 이미 Ruby를 사용하고 있기 때문에,** </span>시스템에 이미 있던 Ruby에서 `gem install bundler` 명령어를 실행하면 다음과 같이 <span style="color:orangered"> **Permission Error**</span>가 나는 것!
 
 이 때 당황하지 말고,
 
-**brew를 먼저 update** 후, **`brew`를 통해 `rbenv`를 설치**하자.
+<span style="color:orangered"> **brew를 먼저 update** 후, **`brew`를 통해 `rbenv`를 설치**하자.</span>
 
 ```sh
 $ brew update
@@ -61,7 +63,7 @@ $ rbenv versions
 
 <br/>
 
-맥 system Ruby가 아닌, **rbenv로 관리되는 Ruby 설치가 필요**하다.
+맥 system Ruby가 아닌, <span style="color:orangered"> **rbenv로 관리되는 Ruby 설치가 필요**</span>하다.
 
 다음 명령어로 **설치 가능한 Ruby의 버전들을 먼저 확인**하자. 
 
@@ -106,13 +108,13 @@ $ rbenv global 3.2.2
 $ rbenv versions
 ```
 
-다음과 같이 별 기호가 성공적으로 3.2.2 옆으로 옮겨 간 것을 볼 수 있다. (3.2.2 버전을 global로 사용중)
+다음과 같이 별 기호가 성공적으로 3.2.2 옆으로 옮겨 간 것을 볼 수 있다. (즉, 3.2.2 버전을 global로 사용중)
 
 ![](https://i.imgur.com/MjW9P43.png)
 
 <br/>
 
-마지막으로는, **rbenv PATH를 추가**해 주어야 하는데, 본인이 사용하는 Shell의 설정파일(`.zshrc` 또는 `.bashrc`)을 열어 다음과 같은 코드를 추가하자.
+마지막으로는, <span style="color:orangered"> **rbenv PATH를 추가**</span>해 주어야 하는데, <span style="color:orangered"> 본인이 사용하는 Shell의 설정파일(`.zshrc` or `.bashrc`)을 열어</span> 다음과 같은 코드를 추가하자.
 
 다음 명령어로 **`.zshrc` 설정파일**을 열어보자. **(필자는 zsh를 사용)**
 
@@ -134,19 +136,22 @@ $ vim ~/.zshrc
 
 그러고 나서 처음에 오류가 났던 `gem install bundler` 명령어를 실행하면, 정상적으로 실행된다.
 
+<br/>
 
 ## 1-2. Jekyll & bundler 설치
 
-다음으로는 **`gem install` 명령어**로 **Jekyll, 그리고 bundler**를 설치해야한다.
+다음으로는 <span style="color:orangered"> **`gem install` 명령어**로 **Jekyll, bundler**를 설치</span>해야한다.
 
 ```sh
 $ gem install jekyll bundler
 ```
+
 <br/>
 
-> **_NOTE:_ What is 'gem'?**
+> **📙 NOTE: What is 'gem'?**
 >
 > - 'gem'은 분산 패키지 시스템으로 라이브러리의 작성이나 공개, 설치를 도와주는 시스템.
+>
 > - Linux에서의 apt 시스템과 유사하다. Ruby는 gem을 사용하여 라이브러리 설치를 진행한다는 것을 알아두자!
 
 <br/>
