Add post images

--- a/_posts/2023-09-22-github-블로그-만들기-2.md
+++ b/_posts/2023-09-22-github-블로그-만들기-2.md
@@ -101,8 +101,8 @@ $ git add .
 
 <br/>
 
-**📙 NOTE: 특정 파일 한 개만 git add 하는 명령어**
-
+> **📙 NOTE: 특정 파일 한 개만 git add 하는 명령어**
+>
 > 아래의 명령어는 hello_world라는 text 파일 하나만 add 해주는 명령어이다.
 > ```sh
 > $ git add hello_world.txt
@@ -119,16 +119,16 @@ $ git add .
 ```sh
 $ git commit -m 'Add YAT theme files'
 ```
-
 <br/>
 
-**📙 NOTE: commit 메세지 작성 Rules**
-
+> **📙 NOTE: commit 메세지 작성 Rules**
+> 
 > commit 메시지는 현재 버전에 대한 내용을 명확하게 작성해야하며, 어느정도 사람들끼리 정해놓은 메세지 작성법이 있다.
 > 
 > 👉 [https://meetup.toast.com/posts/106](https://meetup.toast.com/posts/106)
 
-</br>
+
+<br/>
 
 아래의 **`git push`** 명령어는 git에 현재 폴더를 그대로 업로드 하는 것이 아니라, **지금까지의 이력/버전(commit)을 `push` 하는 것!**
 
