Change post banner images

--- a/_posts/2023-09-21-github-블로그-만들기-1.md
+++ b/_posts/2023-09-21-github-블로그-만들기-1.md
@@ -5,7 +5,7 @@ subtitle: 1. Ruby, Jekyll, 그리고 bundler 설치
 author: astonkim
 categories: Github
 banner:
-  image: /assets/images/20230921.jpg
+  image: /assets/images/002.jpg
   opacity: 0.618
   background: "#000"
   height: "100vh"
