Add post banner image

--- a/_posts/2023-09-25-yat-theme.md
+++ b/_posts/2023-09-25-yat-theme.md
@@ -5,7 +5,7 @@ subtitle: 3. 내가 YAT 테마를 선택한 이유
 author: astonkim
 categories: Github
 banner:
-  image: /assets/images/003.jpg
+  image: /assets/images/20230925.jpg
   opacity: 0.618
   background: "#000"
   height: "100vh"
